--- a/build.gradle
+++ b/build.gradle
@@ -18,9 +18,16 @@ repositories {
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
+	// OpenAPI (Swagger) https://github.com/springdoc/springdoc-openapi
+	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.1.0'
 	runtimeOnly 'com.h2database:h2'
 	runtimeOnly 'org.postgresql:postgresql'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+}
+tasks.jar{
+	manifest{
+		attributes["Main-class"] ="br.com.jntcruz.SantanderBootCamp.SantanderBootCampApplication"
+	}
 }
 
 tasks.named('test') {
